# business-dashboard-gcp-app

./: .gitignore  README.md  app.py  pyproject.toml  styles.html
infra/: sync_airbyte_connection.py
infra/airbyte_terraform/: .gitignore  main.tf  variables.tf
infra/airflow/: airbyte_dag.py  load_sync_dag.py
infra/load_db_scripts/: client_data_faker.py  load_gcp_db.py  load_postgres_db.py
infra/load_db_scripts/data/: client_database.csv
infra/load_db_scripts/data/aum/: aum_01_2024.csv  aum_02_2024.csv  aum_03_2024.csv  aum_04_2024.csv  aum_10_2023.csv  aum_11_2023.csv  aum_12_2023.csv
infra/load_db_scripts/data/fees/: fees_01_2024.csv
